--- a/PASSCITY-iOS/Supporting/Info.plist
+++ b/PASSCITY-iOS/Supporting/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Местоположение используется для отображения событий рядом с Вами</string>
 	<key>NSCameraUsageDescription</key>
 	<string>Камера используется для сканирования штрих-кодов</string>
 	<key>CFBundleDevelopmentRegion</key>
